# Research

./: .gitignore  Chart pattern.txt  MS.txt  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: chatgpt-export-code-txt.yml
bridge/: mt5_executor_daytrader.py
bridge/accounts/: v2.json  v3.json
config/: live_accounts.yaml
models/: FINAL_FROZEN.json  FINAL_FROZEN_V2.json  FINAL_FROZEN_V3.json  champion.json  dir_candidates.json  lgbm_barriers.json  lgbm_candidates.json  lgbm_recipe.json  stacker.json
models/lgbm_evreg_v3/: long.txt  meta.json  short.txt
models/lgbm_final/: long.txt  meta.json  short.txt
models/lgbm_final_v3/: long.txt  meta.json  short.txt
models/lgbm_final_v3b/: long.txt  meta.json  short.txt
models/tcn_final/: meta.json
notes/: FINAL_REPORT.md  LIVE_GUIDE.md  decisions.md  findings.md
runs/: FINALTEST_V2_EXECUTED.flag  OOS_EXECUTED.flag  live_signals.csv
runs/FINALTEST_V2_20260702_162152/: monthly_FINALTEST.csv  portfolio_FINALTEST.json  trades_S2_FINALTEST.csv
runs/OOS_SINGLE_SHOT_20260702_125159/: metrics_OOS_gbt.json  oos_result.json  trades_OOS_gbt.csv
scripts/: ablations.py  live_down.sh  live_status.sh  live_up.sh  overnight_chain.sh
tests/: live_helpers.py  test_backtest.py  test_bus_protocol.py  test_daily_ctx_injection.py  test_executor_pure.py  test_history_seed.py  test_labels.py  test_live_guards.py  test_live_parity_replay.py  test_live_s2_schedule.py  test_live_suffix_features.py  test_lookahead.py  test_overnight.py  test_policy_assembly.py  test_ports.py  test_restart_matrix.py
(+183 files in other folders)
